# learn_cpp

./: .clang-format  .gitignore  .gitmodules
.metals/: metals.mv.db
3rd_tool/: 3rd_tool.sh
algorithm/: README.md  bfs.cpp  bplus_tree.cpp  kcore.cpp  log.txt  scc_kosaraju.cpp  scc_tarjan.cpp  sort.cpp  sort_01_bubble.cpp  sort_02_insertion.cpp  sort_03_selection.cpp  tree.cpp
api_demo/plato/: CMakeLists.txt
api_demo/plato/src/: CMakeLists.txt  plato.cpp  plato.h
api_demo/plato/src/proxy_api/: CMakeLists.txt  graph.cpp
app/: Diary.of.a.Wimpy.Kid.ENG.srt  Diary.of.a.Wimpy.Kid.ENG.srt.txt  Index.cpp  adjacent_list.cpp  aes.cpp  base64  base64.cpp  top.cpp  (+20 more)
cpp_primer/: CMakeLists.txt
cpp_primer/src/ch01_beginning/: CMakeLists.txt  a.out  ch1_1_helloworld.cpp  ch1_2_cout.cpp  ch1_4_4_if.cpp  ch1_4_while.cpp  readme.md
cpp_primer/src/ch02_var_type/: CMakeLists.txt  a.out  ch02_1_primer_type.cpp  ch02_2_variable.cpp  ch02_3_1_ref.cpp  ch02_3_2_point.cpp  ch02_4_const.cpp  ch02_5_type.cpp  ch02_6_struct.cpp
cpp_primer/src/ch03_string_vector_array/: CMakeLists.txt  a.out  ch03_1_using.cpp  ch03_2_string.cpp  ch03_3_vector.cpp  ch03_4_iterator.cpp  ch03_5_array.cpp  ch03_6_mutilarray.cpp
cpp_primer/src/ch04_expression/: CMakeLists.txt
cpp_primer/src/ch05_sentence/: CMakeLists.txt  a.out  ch05_all.cpp
cpp_primer/src/ch06_funtion/: CMakeLists.txt  a.out  ch06_all.cpp
cpp_primer/src/ch07_class/: Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  README.md  build.sh  ch07_class.cpp
cpp_primer/src/ch08_io/: CMakeLists.txt  a.out  ch08_01_iostream.cpp  ch08_02_fileio.cpp  ch08_03_stringio.cpp  read.txt
cpp_primer/src/ch09_container/: CMakeLists.txt  a.out  ch09_01_vector.cpp  ch09_02_deque.cpp  ch09_03_list.cpp  ch09_04_array.cpp  ch09_05_string.cpp  ch09_06_adaptor.cpp
cpp_primer/src/ch10_algorithm/: CMakeLists.txt  a.out  ch10_01.cpp  ch10_02_lambda.cpp
cpp_primer/src/ch11_map/: CMakeLists.txt  a.out  ch11_map.cpp
cpp_primer/src/ch12_memory/: CMakeLists.txt  a.out  ch12_memory.cpp
fbthrift_test/: CMakeLists.txt  README.md
fbthrift_test/cmake/: FindGlog.cmake  ThriftLibrary.cmake
fbthrift_test/src/: CMakeLists.txt  Client.cpp  Client2.cpp  Client3.cpp  Client31.cpp  Client4.cpp  Server.cpp  thrift_client_pool.cpp  thrift_client_pool.h
fbthrift_test/src/handler/: CMakeLists.txt  CalcHandler.cpp  CalcHandler.h
fbthrift_test/src/protocol/: CMakeLists.txt  calc.thrift
fbthrift_test/src/protocol/gen-cpp2/: CalculatorService.cpp  CalculatorService.h  CalculatorService.tcc  CalculatorServiceAsyncClient.cpp  CalculatorServiceAsyncClient.h  CalculatorService_custom_protocol.h  CalculatorService_processmap_compact.cpp  calc_constants.cpp  calc_constants.h  calc_data.cpp  calc_data.h  calc_metadata.cpp  calc_metadata.h  calc_types.cpp  calc_types.h  calc_types.tcc  calc_types_custom_protocol.h
fbthrift_test/src/test/: CMakeLists.txt  ServiceTest.cpp
fmt/: CMakeLists.txt  fmt_example1.cpp
fmt/src/: main.cpp
folly/: CMakeLists.txt
folly/cmake/: FindFolly.cmake  FindGoogletest.cmake
folly/src/: ArenaExample-todo.cpp  AtomicHashmapExample.cpp  CMakeLists.txt  ConvExample.cpp  DynamicExample.cpp  EventBaseExample.cpp  EventBaseTest.cpp  EvictingCacheMapExample.cpp  ExecutorsExample.cpp  FBStringExample.cpp  FormatExample.cpp  FunctionExample.cpp  FuturesExample.cpp  GroupVarintExample.cpp  HashExample.cpp  HistogramExample.cpp  PackedSyncPtrExample.cpp  PolyExample.cpp  ProducerConsumerQueueExample.cpp  RandomExample.cpp  SmallLocksExample.cpp  SmallVectorExample.cpp  StopWatchExample.cpp  StringPieceExample.cpp  SynchronizedExample.cpp  ThreadCachedIntExample.cpp  ThreadLocalExample.cpp  TraitsExample.cpp  UriExample.cpp  UrlMatchBenchmark.cpp  XLogExample.cpp
folly/src/benchmark/: BenchmarkExample.cpp  BenchmarkQueue.cpp  CMakeLists.txt
folly/src/test/: CMakeLists.txt  FutureTest1.cpp  Test1.cpp
gtest/: ASSERT.cpp  CMakeLists.txt  str_match.cpp
gtest/src/: CMakeLists.txt  EnvTest.cpp  FriendTest.cpp  SetUpTest.cpp  SetUpTestCaseTest.cpp
houjie/: CMakeLists.txt
houjie/src/: CMakeLists.txt
houjie/src/cpp_11/: BigThree.cpp  CMakeLists.txt  Decltype.cpp  Final.cpp  Noexcept.cpp  Override.cpp  Range.cpp  SmallFuture.cpp  UniformInitialization.cpp  Using.cpp  VariadicTemplate.cpp  initializer_list.cpp
houjie/src/cpp_obj/: CMakeLists.txt  Complex.h  ComplexTest.cpp  String.h  StringTest.cpp
houjie/src/cpp_stl/: stl_01.md  stl_02_array.cpp  stl_02_vector.cpp  stl_03_oop.md  stl_04_template.md
houjie/src/memory_management/: 01_books.md  02_memory.md  03_new_delete.md
leetcode/_02_1_array/: CMakeLists.txt  _02_1_01.cpp  _02_1_02.cpp  _02_1_03.cpp  _02_1_04.cpp  _02_1_05.cpp  _02_1_06.cpp  _02_1_07.cpp  _02_1_08.cpp  _02_1_09.cpp  _02_1_10.cpp  _02_1_11.cpp  _02_1_12.cpp  _02_1_13.cpp  _02_1_14.cpp  _02_1_15.cpp  _02_1_16.cpp  _02_1_17.cpp  _02_1_18.cpp  _02_1_19.cpp  _02_1_20.cpp  _02_1_21.cpp  _02_1_22.cpp  _02_1_23.cpp  _02_1_24.cpp
lib_so/hello/src/: CMakeLists.txt  hello.cpp
my_map/: CMakeLists.txt
my_map/src/: VectorLite.h  VectorLiteTest.cpp  my_map.cpp  std_map.cpp
proxygen/: CMakeLists.txt
proxygen/src/: CMakeLists.txt
proxygen/src/one_example/: MyHandler.cpp  MyHandler.h  NoFoundHandler.cpp  NoFoundHandler.h  Server.cpp
s3-client/: CMakeLists.txt
s3-client/src/: CMakeLists.txt  example_put_obj.cpp
stl/: CMakeLists.txt
stl/src/: Base.h  CMakeLists.txt  DequeTest.cpp  ListTest.cpp  MapTest.cpp  SetTest.cpp
stl/src/c/: CMakeLists.txt  README.md  assert_test.cpp  ctype_test.cpp
stl/src/cpp/container/: CMakeLists.txt  README.md  _01_ArrayTest.cpp  _01_BitsetTest.cpp  _01_VectorTest.cpp  _02_ForwardListTest.cpp  _02_ListTest.cpp  _03_UnorderedMapTest.cpp  _03_UnorderedSetTest.cpp  _04_QueueTest.cpp  _04_StackTest.cpp  _05_VariantTest.cpp
stl/src/cpp14/: CMakeLists.txt  _01_variable_template.cpp  _02_lambda_expr.cpp
utils/: CMakeLists.txt
utils/src/: MemUsage.h  MemUsageTest.cpp  Time.h  TimeTest.cpp
yas/: CMakeLists.txt  yas_2.cpp  yas_example1.cpp
yas/src/: CMakeLists.txt  test1.cpp  yas_example3.cpp
(+187 files in other folders)
