cmake_minimum_required(VERSION 3.10)
set(CMAKE_VERBOSE_MAKEFILE ON)
project(hello)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(GRAPH_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
INCLUDE_DIRECTORIES(${GRAPH_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)
