add_executable(_02_1_01 _02_1_01.cpp)
add_executable(_02_1_02 _02_1_02.cpp)
add_executable(_02_1_03 _02_1_03.cpp)
add_executable(_02_1_04 _02_1_04.cpp)
add_executable(_02_1_05 _02_1_05.cpp)
add_executable(_02_1_06 _02_1_06.cpp)
add_executable(_02_1_07 _02_1_07.cpp)
add_executable(_02_1_08 _02_1_08.cpp)
add_executable(_02_1_09 _02_1_09.cpp)
add_executable(_02_1_10 _02_1_10.cpp)
add_executable(_02_1_11 _02_1_11.cpp)
add_executable(_02_1_12 _02_1_12.cpp)
add_executable(_02_1_13 _02_1_13.cpp)
add_executable(_02_1_14 _02_1_14.cpp)
add_executable(_02_1_15 _02_1_15.cpp)
add_executable(_02_1_16 _02_1_16.cpp)
add_executable(_02_1_17 _02_1_17.cpp)
add_executable(_02_1_18 _02_1_18.cpp)
add_executable(_02_1_19 _02_1_19.cpp)
add_executable(_02_1_20 _02_1_20.cpp)
add_executable(_02_1_21 _02_1_21.cpp)
add_executable(_02_1_22 _02_1_22.cpp)
add_executable(_02_1_23 _02_1_23.cpp)
add_executable(_02_1_24 _02_1_24.cpp)
