
#add_executable(Server Server.cpp)
#target_link_libraries(Server -lpthread )

add_executable(VectorTest VectorTest.cpp)
add_executable(ArrayTest ArrayTest.cpp)
add_executable(BitsetTest BitsetTest.cpp)
add_executable(DequeTest DequeTest.cpp)
add_executable(ForwardListTest ForwardListTest.cpp)
add_executable(ListTest  ListTest.cpp)
add_executable(MapTest MapTest.cpp)
add_executable(QueueTest QueueTest.cpp)
add_executable(SetTest SetTest.cpp)
add_executable(StackTest StackTest.cpp)



