add_executable(_01_BitsetTest _01_BitsetTest.cpp)
add_executable(_01_ArrayTest _01_ArrayTest.cpp)
add_executable(_01_VectorTest _01_VectorTest.cpp)

add_executable(_02_ForwardListTest _02_ForwardListTest.cpp)
add_executable(_02_ListTest  _02_ListTest.cpp)

add_executable(_03_MapTest _03_MapTest.cpp)
add_executable(_03_SetTest _03_SetTest.cpp)
add_executable(_03_UnorderedMapTest _03_UnorderedMapTest.cpp)
add_executable(_03_UnorderedSetTest _03_UnorderedSetTest.cpp)

add_executable(_04_DequeTest _04_DequeTest.cpp)
add_executable(_04_QueueTest _04_QueueTest.cpp)
add_executable(_04_StackTest _04_StackTest.cpp)

add_executable(_05_VariantTest _05_VariantTest.cpp)



